# python_packaging

./: .gitignore  setup.cfg  setup.py  tox.ini
python_packaging/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
