[metadata]
name = python_packaging
version = file:python_packaging/VERSION

[options]
packages = python_packaging
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    requests

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[options.entry_points]
console_scripts =
    python_packaging = python_packaging.cli:main

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source = 
    python_packaging
    tests

[coverage:paths]
source =
    python_packaging
    .tox/*/lib/python*/site-packages/python_packaging
